# archon

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/scripts/: auto-commit.sh
packaging/: PKGBUILD  archon.desktop  os-optimizer.desktop
src/archon/: __main__.py  sudo_session.py
src/archon/core/: interfaces.py
src/archon/platform/: __init__.py
src/archon/platform/linux/: disk.py  health.py  packages.py
src/archon/ui/: auth_dialog.py  fix_dialog.py  main_window.py  strings.py  update_dialog.py
src/archon/ui/views/: apps_view.py  dashboard_view.py  disk_view.py  health_view.py  packages_view.py
src/os_optimizer/: __main__.py
src/os_optimizer/core/: interfaces.py
src/os_optimizer/platform/: __init__.py
src/os_optimizer/platform/linux/: disk.py  health.py  packages.py
src/os_optimizer/ui/: auth_dialog.py  fix_dialog.py  main_window.py  strings.py  theme.py  update_dialog.py
src/os_optimizer/ui/views/: apps_view.py  dashboard_view.py  disk_view.py  health_view.py  packages_view.py
