[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "archon"
version = "0.1.0"
description = "System health monitor and optimizer"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6",
    "psutil>=5.9",
]

[project.scripts]
archon = "archon.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
